Clean up vignettes

--- a/vignettes/bibliography.bib
+++ b/vignettes/bibliography.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for William Landau at 2016-01-10 00:12:48 -0600 
+%% Created for William Landau at 2016-05-03 21:18:23 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -52,9 +52,9 @@
 	Year = {2014}}
 
 @book{bda,
-	Author = {{Gelman, Andrew et al.}},
+	Author = {Gelman, Andrew and Carlin, John b. and Stern, Hal S. and Dunson, David B. and Vehtari, Aki and Rubin, Donald B.},
 	Date-Added = {2015-10-18 02:38:58 +0000},
-	Date-Modified = {2015-10-18 02:42:32 +0000},
+	Date-Modified = {2016-05-04 02:18:06 +0000},
 	Edition = {3rd},
 	Publisher = {{CRC Press}},
 	Title = {{Bayesian Data Analysis}},
