--- a/vignettes/model.Rmd
+++ b/vignettes/model.Rmd
@@ -22,11 +22,12 @@ vignette: >
 
 # Introduction
 
-The `fbseq` package fits a hierarchical model to RNA-seq data in (nearly) fully Bayesian fashion. Although it was originally designed to fit RNA-seq data, it can also be used to analyze count data with tens of thousands of response variables and only a handful of observations each.
+The `fbseq` package fits a hierarchical model to RNA-sequencing (RNA-seq) count data in fully Bayesian fashion. Publication of the method is pending. For now, here is the model. 
+
 
 # The hierarchical model
 
-Let $y_{n, g}$ be the fully preprocessed RNA-sequencing read count for library/column $n$ ($n = 1, \ldots, N)$ and gene/row $g$ ($g = 1, \ldots, G)$. Let $X$ be the $N \times L$ design matrix for gene-specific effects $\boldsymbol{\beta}_g = (\beta_{1, g}, \ \ldots, \ \beta_{L, g})$. Let $\boldsymbol{X}_n$ be the $n$'th row of $X$. Conditioned on the parameters $\boldsymbol{\beta}_{ g}$ and $\e_{n, g}$, the $y_{n, g}$'s are treated as independent and Poisson-distributed in the likelihood.
+Let $y_{n, g}$ be the fully preprocessed RNA-sequencing read count for replicate (dat column) $n$ ($n = 1, \ldots, N)$ and gene (data row) $g$ ($g = 1, \ldots, G)$. Let $X$ be the $N \times L$ design matrix for gene-specific model coefficient parameters $\boldsymbol{\beta}_g = (\beta_{1, g}, \ \ldots, \ \beta_{L, g})$. Let $\boldsymbol{X}_n$ be the $n$'th row of $X$. Conditioned on the parameters $\boldsymbol{\beta}_{ g}$ and $\e_{n, g}$, the $y_{n, g}$'s are treated as independent and Poisson-distributed in the likelihood.
 
 $$ \begin{align*}
 y_{n,g} \ | \ \boldsymbol{\beta}_g, \ \e_{n, g} \stackrel{\text{ind}}{\sim} \text{Poisson} \left (\exp \left (h_n + \e_{n, g} + \boldsymbol{X}_n \boldsymbol{\beta}_g  \right ) \right )
@@ -40,16 +41,16 @@ $$ \begin{align*}
 \beta_{\ell, g} \ | \ \theta_\ell, \ \sigma_\ell^2, \ \xi_{\ell, g} \stackrel{\text{ind}}{\sim} \text{Normal}(\theta_\ell, \ \sigma_\ell^2 \xi_{\ell, g})
 \end{align*} $$
 
-The design matrix $X$ should be chosen so that this independence assumption is justified as much as possible.
+The design matrix $X$ should be chosen to substantiate the conditional independence assumptions for the $\beta_{\ell, g}$'s in the model. 
 
-The prior means $\theta_\ell$ of $\beta_{\ell, 1}, \beta_{\ell, G}$ are given normal priors. Conditional on the initialization constants $c_\ell^2$, the $\theta_\ell$'s are assumed to be independent.
+The hierarchical means $\theta_\ell$ of $\beta_{\ell, 1}, \beta_{\ell, G}$ are given normal priors. Conditional on the initialization constants $c_\ell^2$, the $\theta_\ell$'s are assumed to be independent.
 
 
 $$ \begin{align*}
 \theta_\ell \ | \ c_\ell^2 \stackrel{\text{ind}}{\sim} \text{Normal}(0, \ c_\ell^2)
 \end{align*} $$
 
-The $c_\ell$'s should be large so that the priors on the $\theta_\ell$'s are diffuse and thus less informative than otherwise.
+The $c_\ell$'s are constants and should be large so that the priors on the $\theta_\ell$'s are diffuse and thus less informative than otherwise.
 
 The $\sigma_\ell$ parameters are assumed to be independent conditional on initialization constants $s_\ell$.
 
@@ -57,21 +58,21 @@ $$ \begin{align*}
 \sigma_\ell \ | \ s_\ell \stackrel{\text{ind}}{\sim} \text{Uniform}(0, \ s_\ell^2)
 \end{align*} $$
 
-This prior is equivalent to a $\sigma_\ell^{-1} \text{I}(\sigma_\ell < s_\ell)$ prior on $\sigma_\ell^2$. The $s_\ell$ constants should be chosen large. 
+This prior is equivalent to a $\sigma_\ell^{-1} \text{I}(\sigma_\ell < s_\ell)$ prior on $\sigma_\ell^2$. The $s_\ell$ constants should be chosen to be large. 
 
 
-The $\xi_{\ell, g}$ parameters are a computational tool for assigning different prior distributions to the $\beta_{\ell, g}$'s. Let the the $\xi_{\ell, g}$'s be conditionally independent given constants $k_\ell$, $q_\ell$, and $r_\ell$, and let 
+The $\xi_{\ell, g}$ parameters are auxiliary variables used to assign different marginal hierarchical distributions to the $\beta_{\ell, g}$'s. Let the the $\xi_{\ell, g}$'s be conditionally independent given constants $k_\ell$, $q_\ell$, and $r_\ell$, and let 
 
 $$ \begin{align*}
 \xi_{\ell, g} \stackrel{\text{ind}}{\sim} p(\xi_{\ell, g} \ | \ k_\ell, \ q_\ell, \ \ r_\ell)
 \end{align*} $$
 
-If $p(\xi_{\ell, g} \ | \ k_\ell, \ q_\ell, \ r_\ell) = I(\xi_{\ell, g} = 1)$, then $\beta_{\ell, g}$ have conditionally independent normal priors. If $p(\xi_{\ell, g} \ | \ k_\ell, \ q_\ell, \ r_\ell) = Exp(\text{rate} = k_\ell)$, then the $\beta_{\ell, g}$'s are independent with Laplace distributions given $\theta_\ell$ and $\sigma_\ell^2$ (default: mean $\theta_\ell$ and variance $\sigma_\ell^2$). Laplace is the recommended and default setting. If $p(\xi_{\ell, g} \ | \ k_\ell, \ q_\ell, \ r_\ell) = \text{Inverse-Gamma}(q_\ell, \ r_\ell)$, then the $\beta_{\ell, g}$'s are independent with Student-$t$ distributions given $\theta_\ell$ and $\sigma_\ell^2$ (default: mean $\theta_\ell$ and variance $\sigma_\ell^2$). If $p(\xi_{\ell, g} \ | \ k_\ell, \ q_\ell, \ r_\ell) = \text{Half-Cauchy}(0, 1)$, then the $\beta_{\ell, g}$'s are independent with horseshoe distributions given $\theta_\ell$ and $\sigma_\ell^2$. For each $\ell$ separately, the user can choose among normal, Laplace, Student-$t$, and horseshoe priors on the $\beta_{\ell, g}$'s.
+If $p(\xi_{\ell, g} \ | \ k_\ell, \ q_\ell, \ r_\ell) = I(\xi_{\ell, g} = 1)$, then $\beta_{\ell, g}$ have conditionally independent normal distributions (default setting of `fbseq`). If $p(\xi_{\ell, g} \ | \ k_\ell, \ q_\ell, \ r_\ell) = Exp(\text{rate} = k_\ell)$, then the $\beta_{\ell, g}$'s are independent with Laplace distributions given $\theta_\ell$ and $\sigma_\ell^2$ (default: mean $\theta_\ell$ and variance $\sigma_\ell^2$). If $p(\xi_{\ell, g} \ | \ k_\ell, \ q_\ell, \ r_\ell) = \text{Inverse-Gamma}(q_\ell, \ r_\ell)$, then the $\beta_{\ell, g}$'s are independent with Student-$t$ distributions given $\theta_\ell$ and $\sigma_\ell^2$ (default: mean $\theta_\ell$ and variance $\sigma_\ell^2$). If $p(\xi_{\ell, g} \ | \ k_\ell, \ q_\ell, \ r_\ell) = \text{Half-Cauchy}(0, 1)$, then the $\beta_{\ell, g}$'s are independent with horseshoe distributions given $\theta_\ell$ and $\sigma_\ell^2$. For each $\ell$ separately, the user can choose among normal, Laplace, Student-$t$, and horseshoe priors on the $\beta_{\ell, g}$'s.
 
 
 ## Noise
 
-The $h_n$ terms are constants estimated from the data before the MCMC. These play the role of customary log-scale RNA-seq normalization factors, accounting for library-specific nuisance effects such as different sequencing depths. Unfortunately, they need to be constants, not model parameters. In test versions of the package, they were given priors and treated as parameters, and they did not converge in the MCMC. This may be because of a lack of identifiability.
+The $h_n$ terms are constants estimated from the data before the MCMC. These play the role of customary log-scale RNA-seq normalization factors, accounting for replicate-specific nuisance effects such as different sequencing depths.
 
 The $\e_{n, g}$ terms are noise that the Poisson distribution does not account for. Conditional on their variances $\gamma_g$, the $\e_{n, g}$ parameters are independent with normal distributions.
 
@@ -79,7 +80,7 @@ $$ \begin{align*}
 \e_{n,g} \ | \ \gamma_g \stackrel{\text{ind}}{\sim} \text{Normal}(0, \ \gamma_g)
 \end{align*} $$
 
-The $\gamma_g$'s play the role of overdispersion terms, analogous to the overdispersions in traditional negative-binomial likelihood models used in packages like `edgeR`. Conditioned on parameters $\nu$ and $\tau$, they have independent inverse-gamma distributions.
+The $\gamma_g$'s are analogous to the negative binomial dispersions in more traditional RNA-seq models from packages like `edgeR`. Conditioned on parameters $\nu$ and $\tau$, they have independent inverse-gamma distributions.
 
 $$ \begin{align*}
 \gamma_g \ | \ \nu, \ \tau \stackrel{\text{ind}}{\sim} \text{Inverse-Gamma} \left ( \frac{\nu}{2}, \ \frac{\nu \tau}{2} \right )
@@ -116,15 +117,13 @@ $$ \begin{align*}
 
 # Inference
 
-The inference is Bayesian. To explain, let $Y$ be the $N \times G$ matrix of the count data terms $y_{n, g}$. The joint posterior distribution of all the parameters given $Y$ is estimated using a slice-sampling-within-Gibbs Markov chain Monte Carlo algorithm. During the MCMC, gene-specific posterior probabilities of interest are calculated using Monte Carlo parameter samples of the $\beta_{\ell, g}$ parameters. The package can calculate posterior probabilities of logical conjunctions of inequalities involving arbitrary contrasts of the $\beta_{\ell, g}$'s. Examples of these posterior probabilities are
+The `fbseq` package estimates posterior probabilities that depend on logical conjunctions of linear combinations of the $\beta_{\ell,g}$ parameters. Possible examples are below.
 
 $$ \begin{align*}
-&P\left( \left . \beta_{1, g} > 0 \  \right | \ Y \right) \\
-&P\left( \left . \beta_{2, g} - \beta_{3, g} > 1 \ \right | \ Y \right) \\
-&P\left( \left . \beta_{1, g} - \beta_{3, g} > 0 \text{  and  } \beta_{2, g} - \beta_{3, g} > \sqrt{2} \text{  and  } \beta_{4, g} > -\log(\pi) \ \right | \ Y \right) \\
+&P\left( \left . \beta_{1, g} > 0 \  \right | \ \text{data} \right) \\
+&P\left( \left . \beta_{2, g} - \beta_{3, g} > 1 \ \right | \ \text{data} \right) \\
+&P\left( \left . \beta_{1, g} - \beta_{3, g} > 0 \text{  and  } \beta_{2, g} - \beta_{3, g} > \sqrt{2} \text{  and  } \beta_{4, g} > -\log(\pi) \ \right | \ \text{data} \right) \\
 \end{align*} $$
-
-Any contrast can appear on the left side of each inequality, and any fixed number can appear on the right side. "Greater-than" is the only relation supported.
 
 
 
